fix horizontal scrolling on 375+ width
55 pixels to go :)

--- a/src/components/Main/AboutMe/AboutMe.scss
+++ b/src/components/Main/AboutMe/AboutMe.scss
@@ -17,13 +17,19 @@
 
   &__content {
     display: flex;
-    flex-direction: row-reverse;
     justify-content: space-between;
+
+    flex-direction: row-reverse;
+    @media screen and (max-width: $breakpoint-mobile) {
+      flex-direction: column;
+    }
 
     padding-top: 66px;
   }
 
   &__image {
+    align-self: center;
+
     max-width: 270px;
     max-height: 327px;
 
