--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -38,7 +38,7 @@
 
 // anything wider is for 1280px design
 $breakpoint-tablet: 1023px; // for 768px design
-$breakpoint-mobile: 424px; // for 320px design
+$breakpoint-mobile: 694px; // for 320px design
 
 $_default-padding-landing: 70px;
 $_default-padding-landing-tablet: 50px;
